--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - run: |
         echo "Status: ${{ github.event.client_payload.status }}"
-        echo "Path: ${{ github.event.client_payload.path }}"
+        echo "Payload: ${{ github.event.client_payload }}"
   slack:
     runs-on: ubuntu-latest
     steps:
