--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -10,7 +10,7 @@ jobs:
     - run: |
         echo "Status: ${{ github.event.client_payload.status }}"
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
-        echo format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com',  ${{ github.event.client_payload.path}} )
+        echo ${{ format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path) }}
   slack:
     runs-on: ubuntu-latest
     steps:
@@ -41,7 +41,7 @@ jobs:
           # For posting a rich message using Block Kit
           payload: |
             {
-              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com',  ${{ github.event.client_payload.path}} )"
+              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com', github.event.client_payload.path) }}"
             }
   cdn-purge:
     runs-on: ubuntu-latest
@@ -49,6 +49,6 @@ jobs:
     - name: Purge CDN
       uses: fjogeleit/http-request-action@v1
       with:
-        url: format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com',  ${{steps.format.outputs.replaced}})
+        url: ${{ format('https://api.fastly.com/purge/{0}/{1}', 'hmqa-dev.factory.alshayauat.com',  steps.format.outputs.replaced) }}
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json", "Fastly-Key": "${{ secrets.FASTLY_API_KEY }}", "Accept": "application/json"}'
