--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -44,6 +44,7 @@ jobs:
               "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com', steps.format.outputs.replaced) }}"
             }
   cdn-purge:
+    if: ${{ contains(fromJSON(vars.CDN_PURGE_SITES), github.event.client_payload.site) }}
     runs-on: ubuntu-latest
     steps:
       - name: Format path
