--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -11,7 +11,7 @@ jobs:
         echo "Status: ${{ github.event.client_payload.status }}"
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
-        echo ${{ vars.CDN_PURGE_SITES}}
+        echo ${{ vars.CDN_PURGE_SITES}} ${{ fromJSON(vars.CDN_PURGE_SITES) }}
   slack:
     runs-on: ubuntu-latest
     steps:
