--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -12,6 +12,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
+        echo ${{ vars.CDN_DOMAINS}} ${{ fromJson(vars.CDN_PURGE_SITES)[github.event.client_payload.site]}}
   slack:
     runs-on: ubuntu-latest
     steps:
