--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -14,7 +14,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
-        echo ${{ env.CDN_DOMAINS_JSON}} ${{ env.CDN_DOMAINS_JSON[github.event.client_payload.site]}}
+        echo ${{ env.CDN_DOMAINS_JSON}}
   slack:
     runs-on: ubuntu-latest
     steps:
