--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -4,7 +4,7 @@ on:
       - resource-published
       - resource-unpublished
 env:
-  CDN_DOMAINS_JSON: ${{ fromJson(vars.CDN_PURGE_SITES) }}
+  CDN_DOMAINS_JSON: 'hello'
 jobs:
   print:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
-        echo ${{ env.CDN_DOMAINS_JSON}}
+        echo ${{ vars.CDN_DOMAINS}} ${{ fromJson(vars.CDN_PURGE_SITES)[github.event.client_payload.site]}}
   slack:
     runs-on: ubuntu-latest
     steps:
