--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -3,8 +3,6 @@ on:
     types:
       - resource-published
       - resource-unpublished
-env:
-  CDN_DOMAINS_JSON: 'hello'
 jobs:
   print:
     runs-on: ubuntu-latest
@@ -14,7 +12,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
-        echo ${{ vars.CDN_DOMAINS}} ${{ fromJson(vars.CDN_DOMAINS)}}
+        echo ${{ vars.CDN_DOMAINS}}
   slack:
     runs-on: ubuntu-latest
     steps:
