--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -12,7 +12,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
-        echo ${{ vars.CDN_DOMAINS}}
+        echo ${{ vars.CDN_DOMAINS[github.event.client_payload.sites]}}
   slack:
     runs-on: ubuntu-latest
     steps:
@@ -43,7 +43,7 @@ jobs:
           # For posting a rich message using Block Kit
           payload: |
             {
-              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com', steps.format.outputs.replaced) }}, ${{ vars.CDN_DOMAINS }}"
+              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com', steps.format.outputs.replaced) }}, ${{ toJson(vars.CDN_DOMAINS) }}"
             }
   cdn-purge:
     if: ${{ contains(vars.CDN_PURGE_SITES, github.event.client_payload.site) }}
