--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -12,6 +12,7 @@ jobs:
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
         echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
+        echo ${{ toJson(vars.CDN_DOMAINS) }}
         echo ${{ vars.CDN_DOMAINS[github.event.client_payload.sites]}}
   slack:
     runs-on: ubuntu-latest
