--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -7,20 +7,12 @@ jobs:
   print:
     runs-on: ubuntu-latest
     steps:
-    - name: Format Site key
-      id: sitekey
-      uses: frabert/replace-string-action@v2
-      with:
-        pattern: '-'
-        string: ${{ github.event.client_payload.site }}
-        replace-with: ''
     - run: |
         echo "Status: ${{ github.event.client_payload.status }}"
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
-        echo ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  github.event.client_payload.path)}}
+        echo ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site],  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
         echo ${{ toJson(vars.CDN_DOMAINS) }}
-        echo ":: ${{ steps.sitekey.outputs.replaced }}>> ${{ fromJSON(vars.CDN_DOMAINS)[steps.sitekey.outputs.replaced]}}::"
         echo ":: ${{ github.event.client_payload.site }}>> ${{ fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site]}}::"
   slack:
     runs-on: ubuntu-latest
@@ -52,7 +44,7 @@ jobs:
           # For posting a rich message using Block Kit
           payload: |
             {
-              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com', steps.format.outputs.replaced) }}, ${{ toJson(vars.CDN_DOMAINS) }}"
+              "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site], steps.format.outputs.replaced) }}, ${{ toJson(vars.CDN_DOMAINS) }}"
             }
   cdn-purge:
     if: ${{ contains(vars.CDN_PURGE_SITES, github.event.client_payload.site) }}
@@ -69,7 +61,7 @@ jobs:
         id: purgecdn
         uses: fjogeleit/http-request-action@v1
         with:
-          url: ${{ format('https://api.fastly.com/purge/{0}{1}', 'hmqa-dev.factory.alshayauat.com',  steps.format.outputs.replaced) }}
+          url: ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site],  steps.format.outputs.replaced) }}
           method: 'POST'
           customHeaders: '{"Content-Type": "application/json", "Fastly-Key": "${{ secrets.FASTLY_API_KEY }}", "Accept": "application/json"}'
       - name: Show Response
