--- a/.github/workflows/log-publish.yaml
+++ b/.github/workflows/log-publish.yaml
@@ -10,7 +10,6 @@ jobs:
     - run: |
         echo "Status: ${{ github.event.client_payload.status }}"
         echo "Payload: ${{ toJson(github.event.client_payload) }}"
-        echo ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site],  github.event.client_payload.path)}}
         echo ${{ vars.CDN_PURGE_SITES}}
         echo ${{ toJson(vars.CDN_DOMAINS) }}
         echo ":: ${{ github.event.client_payload.site }}>> ${{ fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site]}}::"
@@ -46,8 +45,8 @@ jobs:
             {
               "text": "Just published: https://www.aem.live${{ steps.format.outputs.replaced }}, Status: ${{ github.event.client_payload.status }}, ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site], steps.format.outputs.replaced) }}, ${{ toJson(vars.CDN_DOMAINS) }}"
             }
-  cdn-purge:
-    if: ${{ contains(vars.CDN_PURGE_SITES, github.event.client_payload.site) }}
+  cdn-purgemd:
+    if: ${{ contains(vars.CDN_PURGE_SITES, github.event.client_payload.site) && !endsWith(github.event.client_payload.path, 'placeholders.json') && !endsWith(github.event.client_payload.site, 'global') }}
     runs-on: ubuntu-latest
     steps:
       - name: Format path
@@ -57,8 +56,8 @@ jobs:
           pattern: '\.md'
           string: ${{ github.event.client_payload.path }}
           replace-with: ''
-      - name: Purge CDN
-        id: purgecdn
+      - name: Purge CDN Markdown
+        id: purgecdnmd
         uses: fjogeleit/http-request-action@v1
         with:
           url: ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[github.event.client_payload.site],  steps.format.outputs.replaced) }}
@@ -66,6 +65,32 @@ jobs:
           customHeaders: '{"Content-Type": "application/json", "Fastly-Key": "${{ secrets.FASTLY_API_KEY }}", "Accept": "application/json"}'
       - name: Show Response
         run: |
-          echo ${{ steps.purgecdn.outputs.response }}
-          echo ${{ steps.purgecdn.outputs.headers }}
-          echo ${{ steps.purgecdn.outputs.status }}
+          echo ${{ steps.purgecdnmd.outputs.response }}
+          echo ${{ steps.purgecdnmd.outputs.headers }}
+          echo ${{ steps.purgecdnmd.outputs.status }}
+  cdn-purgejson:
+    if: ${{ contains(vars.CDN_PURGE_SITES, github.event.client_payload.site) && endsWith(github.event.client_payload.path, 'placeholders.json') && endsWith(github.event.client_payload.site, 'global') }}
+    runs-on: ubuntu-latest
+    strategy:
+        matrix:
+            domain: ${{ fromJSON(vars.CDN_DOMAINS_ALL)[github.event.client_payload.site] }}
+    steps:
+      - name: Format path
+        id: format
+        uses: frabert/replace-string-action@v2
+        with:
+          pattern: '\.md'
+          string: ${{ github.event.client_payload.path }}
+          replace-with: ''
+      - name: Purge CDN JSON
+        id: purgecdnjson
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ format('https://api.fastly.com/purge/{0}{1}', fromJSON(vars.CDN_DOMAINS)[matrix.domain],  steps.format.outputs.replaced) }}
+          method: 'POST'
+          customHeaders: '{"Content-Type": "application/json", "Fastly-Key": "${{ secrets.FASTLY_API_KEY }}", "Accept": "application/json"}'
+      - name: Show Response
+        run: |
+          echo ${{ steps.purgecdnjson.outputs.response }}
+          echo ${{ steps.purgecdnjson.outputs.headers }}
+          echo ${{ steps.purgecdnjson.outputs.status }}
